--- a/app/src/main/res/layout/fragment_add_laporan.xml
+++ b/app/src/main/res/layout/fragment_add_laporan.xml
@@ -160,7 +160,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/tv_status"
+        android:id="@+id/bt_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
